consumer partition assign